# Proyecto1Datos2Mpointers

./: .gitignore  CMakeLists.txt  memory_manager_server.cpp
Client/: client.cpp
LinkedList/: LinkedList.cpp  LinkedList.h  Node.h
MemoryManager/: MemoryManagerProgram.cpp
Mpointer/: CMakeLists.txt  Mpointers.cpp  Mpointers.h
protos/: memory_manager.proto
tests/: MemoryManagerTests.cpp
